tests/compError/assert_false.ucl
// compError
// error: assert failed
// tests/compError/assert_false.ucl:5 -> here

@compAssert(false)